--- a/omero_boost/templates/omeroboost/webclient_plugins/omero_boost_upload.html
+++ b/omero_boost/templates/omeroboost/webclient_plugins/omero_boost_upload.html
@@ -44,6 +44,7 @@
     WEBCLIENT.CAN_CREATE = {{ ome.can_create|json_dumps|safe }};
     WEBCLIENT.current_admin_privileges = {{ current_admin_privileges|json_dumps|safe }};
     WEBCLIENT.leader_of_groups = {{ leader_of_groups|json_dumps|safe }};
+    WEBCLIENT.active_group_id = {{ ome.active_group }};
 
     WEBCLIENT.URLS = {};
     WEBCLIENT.URLS.webindex = "{% url 'webindex' %}";
