--- a/omero_boost/templates/omeroboost/webclient_plugins/omero_boost_upload.html
+++ b/omero_boost/templates/omeroboost/webclient_plugins/omero_boost_upload.html
@@ -2,24 +2,25 @@
 {% load common_filters %}
 
 {% block title %}
-  Server Side Browser
+  Server Side Browser & Imports Database
 {% endblock %} 
 
 {% block link %}
   {{ block.super }}
-  <!-- <link
-    rel="stylesheet"
-    href="{% static main_css %}"
-  /> -->
+  <!-- Add CSS styles specific to both pages -->
+  <link rel="stylesheet" type="text/css" href="{% static 'omero_boost/assets/database_pages.css' %}">
 {% endblock %} 
 
 {% block script %} 
   {{ block.super }}
+
   <!-- keep-alive ping so that OMERO session doesn't die -->
   {% include "webclient/base/includes/ping.html" %} 
+  <script src="{% static 'webclient/javascript/jquery.infieldlabel-0.1.js' %}" type="text/javascript"></script>
   <script src="{% static main_js %}"></script>
+  
   <script>
-    // OMERO constants
+    // JavaScript variables and constants from the first page
     if (OMERO === undefined) {var OMERO = {};}
     OMERO['constants'] = {
         'namespaces': {
@@ -32,11 +33,7 @@
             'NSCLIENTMAPANNOTATION': "{{ omero.constants.NSCLIENTMAPANNOTATION }}"
         }
     };
-
-    // Variables used by static files, particularly ome.tree.js for jstree setup
-    // Also used by right panel annotation tabs
     var WEBCLIENT = {};
-
     WEBCLIENT.USER = {'id': {{ ome.user.id }}, 'fullName': "{{ ome.user.getFullName }}"};
     WEBCLIENT.active_user = {'id': {{ ome.active_user }}, 'fullName': "{{ active_user.getFullName }}"};
     WEBCLIENT.member_of_groups = {{ member_of_groups|json_dumps|safe }};
@@ -89,12 +86,52 @@
         var PAGE_SIZE = {{ page_size }};
     {% endif %}
     window.WEBCLIENT = WEBCLIENT;
+    // JavaScript for Metabase iframe
+    $(document).ready(function(){
+      var METABASE_SITE_URL = "{{ metabase_site_url }}";
+      var token = "{{ metabase_token }}";
+      var refreshInterval = 20; // Set the refresh interval to 20 seconds
+      var iframeUrl = METABASE_SITE_URL + "/embed/dashboard/" + token + "#bordered=true&titled=true&refresh=" + refreshInterval;
+
+      var iframe = $('<iframe>', {
+          src: iframeUrl,
+          frameborder: 0
+      });
+
+      $('#metabase-dashboard').append(iframe);
+
+      var loadTimeout = setTimeout(function() {
+          $('#metabase-dashboard').html('<div class="error">Error loading Metabase dashboard. Please try refreshing the page.</div>');
+      }, 30000); // 30 seconds timeout
+
+      iframe.on('load', function() {
+          clearTimeout(loadTimeout);
+      });
+
+      // Log admin status to console
+      console.log("User is " + "{% if is_admin %}an admin{% else %}not an admin{% endif %}");
+      console.log("Username: {{ user_name }}");
+      console.log("User ID: {{ user_id }}");
+  });
+    </script>
     </script>
 
+</script>
+
 {% endblock %}
+
 {% block content %} 
   {{ block.super }} 
   {% csrf_token %}
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+  <!-- Second Page Content (Metabase iframe) -->
+  
+  <div id="metabase-dashboard"></div>
+  <div class="bottom-message">
+    {% if is_admin %}
+        <a href="{{ metabase_site_url|add:'/' }}" target="_blank">Click here to access the Metabase interface</a>
+    {% endif %}
+  </div>
 {% endblock %}
