--- a/omero_boost/templates/omeroboost/webclient_plugins/omero_boost_upload.html
+++ b/omero_boost/templates/omeroboost/webclient_plugins/omero_boost_upload.html
@@ -1,24 +1,24 @@
-{% extends "webadmin/base.html" %} {% load i18n %} {% load static %} 
+{% extends 'webadmin/base.html' %} {% load i18n %} {% load static %}
 {% load common_filters %}
 
 {% block title %}
   Server Side Browser & Imports Database
-{% endblock %} 
+{% endblock %}
 
 {% block link %}
   {{ block.super }}
   <!-- Add CSS styles specific to both pages -->
-  <link rel="stylesheet" type="text/css" href="{% static 'omero_boost/assets/database_pages.css' %}">
-{% endblock %} 
+  <link rel="stylesheet" type="text/css" href="{% static 'omero_boost/assets/database_pages.css' %}" />
+{% endblock %}
 
-{% block script %} 
+{% block script %}
   {{ block.super }}
 
   <!-- keep-alive ping so that OMERO session doesn't die -->
-  {% include "webclient/base/includes/ping.html" %} 
+  {% include 'webclient/base/includes/ping.html' %}
   <script src="{% static 'webclient/javascript/jquery.infieldlabel-0.1.js' %}" type="text/javascript"></script>
   <script src="{% static main_js %}"></script>
-  
+
   <script>
     // JavaScript variables and constants from the first page
     if (OMERO === undefined) {var OMERO = {};}
@@ -112,26 +112,23 @@
       console.log("User is " + "{% if is_admin %}an admin{% else %}not an admin{% endif %}");
       console.log("Username: {{ user_name }}");
       console.log("User ID: {{ user_id }}");
-  });
-    </script>
-    </script>
+    });
 
-</script>
-
+  </script>
 {% endblock %}
 
-{% block content %} 
-  {{ block.super }} 
+{% block content %}
+  {{ block.super }}
   {% csrf_token %}
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
   <!-- Second Page Content (Metabase iframe) -->
-  
+
   <div id="metabase-dashboard"></div>
   <div class="bottom-message">
     {% if is_admin %}
-        <a href="{{ metabase_site_url|add:'/' }}" target="_blank">Click here to access the Metabase interface</a>
+      <a href="{{ metabase_site_url|add:'/' }}" target="_blank">Click here to access the Metabase interface</a>
     {% endif %}
   </div>
 {% endblock %}
