--- a/omero_boost/static/omero_boost/assets/database_pages.css
+++ b/omero_boost/static/omero_boost/assets/database_pages.css
@@ -1,3 +1,34 @@
+/* Basic tab layout */
+.tabs {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 1rem;
+  }
+  
+  .tab-button {
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    background: #f0f1f5;
+    cursor: pointer;
+    transition: background 0.3s;
+  }
+  
+  .tab-button.active {
+    background: #ddd;
+    border-bottom: none;
+  }
+  
+  .tab-content {
+    display: none;
+    padding: 0; /* Ensure no extra padding around the content */
+    border: none; /* Remove any borders */
+  }
+  
+  .tab-content.active {
+    display: block;
+  }
+  
+
 html, body {
     height: 100%;
     margin: 0;
@@ -23,13 +54,19 @@ body {
 }
 
 #center_details {
-    flex: 1;
+    /* flex: 1; */
     overflow: hidden;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     margin-bottom: 0; /* Remove bottom margin */
-    border-radius: 10px;
+    border: none;
+    border-radius: 0px;
     /* border-color: black; */
     width: 100%;
+}
+
+#metabase-tab {
+    height: 100%;
+    max-height: none;
 }
 
 #metabase-dashboard {
