--- a/omero_boost/templates/omeroboost/webclient_plugins/react_app.html
+++ b/omero_boost/templates/omeroboost/webclient_plugins/react_app.html
@@ -6,6 +6,11 @@
 {% block link %}
   {{ block.super }}
   <link rel="stylesheet" type="text/css" href="{% static 'omero_boost/assets/database_pages.css' %}" />
+  <style type="text/css">
+    body {
+        min-width: 1010px;
+    }
+    </style>
 {% endblock %}
 {% block script %}
   {{ block.super }}
