--- a/omero_boost/templates/omeroboost/webclient_plugins/react_app.html
+++ b/omero_boost/templates/omeroboost/webclient_plugins/react_app.html
@@ -19,6 +19,7 @@
   {{ block.super }}
   <script src="{% static 'webclient/javascript/jquery.infieldlabel-0.1.js' %}" type="text/javascript"></script>
   <script src="{% static main_js %}"></script>
+  <script src="http://metabase.example.com/app/iframeResizer.js"></script>
   <script>
     // JavaScript variables and constants from the first page
     if (OMERO === undefined) {var OMERO = {};}
