--- a/omero_boost/templates/omeroboost/webclient_plugins/react_app.html
+++ b/omero_boost/templates/omeroboost/webclient_plugins/react_app.html
@@ -110,8 +110,8 @@
     data-metabase-url="{{ metabase_site_url }}"
     data-metabase-token-monitor-workflows="{{ metabase_token_monitor_workflows }}"
     data-metabase-token-imports="{{ metabase_token_imports }}"
-    data-is-admin="{% if is_admin %}true{% else %}false{% endif %}">
-    <!-- Your OMERO app content goes here (rendered by React) -->
+    data-is-admin="{{ is_admin|yesno:'true,false' }}"
+    data-adi-enabled="{{ adi_enabled|yesno:'true,false' }}">
   </div>
 
 {% endblock %} 
