allow disabling modules

--- a/omero_biomero/templates/omero_biomero/webclient_plugins/react_app.html
+++ b/omero_biomero/templates/omero_biomero/webclient_plugins/react_app.html
@@ -82,6 +82,9 @@
     WEBCLIENT.UI.TREE = {};
     WEBCLIENT.UI.TREE.pagination_nodes = ["experimenter", "screen", "plate", "acquisition", "project", "tagset", "image"];
     WEBCLIENT.UI.TREE.type_order = "{{ui.tree.type_order}}".toLowerCase().split(",").filter(function(e){return e});
+    WEBCLIENT.UI.ADI_ENABLED = {{ adi_enabled|yesno:"true,false" }};
+    WEBCLIENT.UI.ANALYZE_ENABLED = {{ analyze_enabled|yesno:"true,false" }};
+
 
     {% if page_size %}
         var PAGE_SIZE = {{ page_size }};
